--- a/provisioning/roles/dante/tasks/main.yml
+++ b/provisioning/roles/dante/tasks/main.yml
@@ -1,12 +1,11 @@
 ---
-- name: create user proxyuser with super secret password (xd) # TODO: change this
+- name: create user {{ proxy_user }}
   user:
-    name: proxyuser
+    name: "{{ proxy_user }}"
     create_home: false
     state: present
     shell: /sbin/nologin
-    # mkpasswd --method=sha-512
-    password: $6$LHjo6eVU$FmNUnEzcKU/GFBUCiYRDZX71VinwWe2RKqIFYM/IyAlIaUjYRoO30e8Qjghjpt01EXR6CgsvY19SLoovTQJvY.
+    password: "{{ proxy_user_password | password_hash('sha512') }}"
     update_password: always
 
 - name: Install dante
