--- a/provisioning/roles/maildb/tasks/main.yml
+++ b/provisioning/roles/maildb/tasks/main.yml
@@ -1,4 +1,20 @@
 ---
+- name: Install mysql packages
+  apt:
+    name: "{{ item }}"
+    state: latest
+  loop: ["mysql-server", "python-mysqldb"]
+
+# guess about https://github.com/geerlingguy/ansible-role-mysql/blob/master/templates/my.cnf.j2
+# maybe root pass https://dev.to/oscherler/changing-the-mysql-root-user-from-authsocket-to-password-authentication-using-ansible-3l5m
+
+- name: Ensure mysql is running and starts on boot
+  service:
+    name: mysql
+    state: started
+    enabled: yes
+
+
 - name: "/tmp/maildb.sql"
   template:
     src: "maildb.sql.j2"
@@ -6,22 +22,20 @@
 
 - name: "Create mailserver database"
   mysql_db:
-    name:
-      - "{{ maildb.database }}"
-      - nextcloud
+    name: maildatabase
     state: present
 
 - name: "Import mailserver database"
   mysql_db:
-    name: "{{ maildb.database }}"
+    name: maildatabase
     state: import
     target: /tmp/maildb.sql
 
 - name: Create mailserver MySQL user
   mysql_user:
-    name: "{{ maildb.username }}"
-    password: "{{ maildb.password }}"
-    priv: "{{ maildb.database }}.*:ALL/nextcloud.*:ALL"
+    name: "{{ mail_mysql_username }}"
+    password: "{{ mail_mysql_password }}"
+    priv: "maildatabase.*:ALL"
 
 - name: "/tmp/maildb.sql: remove"
   file:
