--- a/provisioning/roles/redis/handlers/main.yml
+++ b/provisioning/roles/redis/handlers/main.yml
@@ -1,10 +1,6 @@
 ---
 - name: start redis
-  service:
+  systemd:
     name: redis-server
     state: started
-
-- name: restart redis
-  service:
-    name: redis-server
-    state: restarted
+    enabled: yes
