--- a/provisioning/roles/wireguard/tasks/wireguard-setup.yml
+++ b/provisioning/roles/wireguard/tasks/wireguard-setup.yml
@@ -1,35 +1,77 @@
 ---
-- name: Generate private keys
-  shell: wg genkey
-  register: wireguard_genkey
-  changed_when: false
+- name: ensure all wireguard services are stopped and enabled
+  service:
+    name: "{{ item }}"
+    state: stopped
+    enabled: yes
+  with_items:
+    - wg-quick@wg0
 
-- set_fact:
-    private_key: "{{ wireguard_genkey.stdout }}"
+- name: check if wg0-server.conf already exists
+  stat:
+    path: /etc/wireguard/wg0.conf
+  register: wg0_conf
 
-- name: Generate public keys
-  shell: "echo {{ private_key }} | wg pubkey"
-  register: wireguard_pubkey
-  changed_when: false
-
-- set_fact:
-    public_key: "{{ wireguard_pubkey.stdout }}"
-
-- name: Create wireguard directory
+- name: generate directories for client configs
   file:
-    path: /etc/wireguard
+    path: "~/wg/client_{{ item }}"
     state: directory
-
-- name: Configuring wireguard
-  template:
-    src: wg.conf.j2
-    dest: /etc/wireguard/wg0.conf
     owner: root
     group: root
-    mode: 600
+    mode: 0700
+  with_sequence: start=1 end={{ vpn_clients }}
+  when: wg0_conf is not defined or wg0_conf.stat.exists == false
 
-- name: Starting wireguard
-  systemd:
-    name: "wg-quick@wg0"
-    enabled: yes
+- name: generate private and public keys for the client and server
+  shell: umask 077; wg genkey | tee ~/wg/{{ item }}.private | wg pubkey > ~/wg/{{ item }}.public
+  register: key_files
+  with_sequence: start=0 end={{ vpn_clients }}
+  when: wg0_conf is not defined or wg0_conf.stat.exists == false
+
+- name: register private key file contents
+  shell: cat ~/wg/{{ item }}.private
+  register: private_key_files
+  with_sequence: start=0 end={{ vpn_clients }}
+
+- name: register public key file contents
+  shell: cat ~/wg/{{ item }}.public
+  register: public_key_files
+  with_sequence: start=0 end={{ vpn_clients }}
+
+- name: generate client configs
+  template:
+    src: "root/wg/client.conf.j2"
+    dest: "~/wg/client_{{ item }}/wg0-client.conf"
+    owner: root
+    group: root
+    mode: 0600
+  with_sequence: start=1 end={{ vpn_clients }}
+  when: wg0_conf is not defined or wg0_conf.stat.exists == false
+
+- name: generate qr codes for client configs
+  shell: umask 077; qrencode --type=PNG --output=/root/wg/client_{{ item }}/wg0-client.png < ~/wg/client_{{ item }}/wg0-client.conf
+  with_sequence: start=1 end={{ vpn_clients }}
+  when: wg0_conf is not defined or wg0_conf.stat.exists == false
+
+- name: generate server config
+  template:
+    src: "etc/wireguard/wg0.conf.j2"
+    dest: "/etc/wireguard/wg0.conf"
+    owner: root
+    group: root
+    mode: 0600
+
+- name: enable ipv4 traffic forwarding
+  sysctl:
+    name: net.ipv4.ip_forward
+    value: "1"
+    sysctl_set: yes
+    state: present
+    reload: yes
+
+- name: ensure all wireguard services are started
+  service:
+    name: "{{ item }}"
     state: started
+  with_items:
+    - wg-quick@wg0
