Beautify Readme a bit

--- a/provisioning/setup.yml
+++ b/provisioning/setup.yml
@@ -37,6 +37,7 @@
     # - wallabag
 
     # Ideas:
+    # - bitwarden
     # - web analytics # matomo or something else
     # - rocket.chat
     # - torrents-api # Jackett
