--- a/provisioning/roles/security/tasks/main.yml
+++ b/provisioning/roles/security/tasks/main.yml
@@ -74,3 +74,8 @@
 - name: "/etc/ssl/dhparams.pem (weak)"
   shell: openssl dhparam -out /etc/ssl/dhparams.pem 512
   when: not security.strong_primes
+
+# TODO: linux-headers-generic or https://askubuntu.com/questions/1131060/how-to-exclude-kernel-updates-from-unattended-upgrades
+# TPDP" fail2ban rules
+
+# TODO: https://unix.stackexchange.com/a/368309
