--- a/provisioning/roles/wireguard/tasks/wireguard-install.yml
+++ b/provisioning/roles/wireguard/tasks/wireguard-install.yml
@@ -15,6 +15,8 @@
       Pin: release a=unstable
       Pin-Priority: 150
 
+# TODO: need a reboot 
+
 - name: Install dependencies (Debian)
   apt:
     name: "{{ item }}"
