--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@
 secret
 provisioning/roles/jffz.netdata/
 provisioning/roles/robertdebock.bootstrap/
+provisioning/roles/djx339.swapoff/
 provisioning/roles/sjinks.haveged/
 provisioning/wireguard_profiles
