--- a/provisioning/roles/php/tasks/main.yml
+++ b/provisioning/roles/php/tasks/main.yml
@@ -30,23 +30,22 @@
     - "php{{ php_ver }}-mysql"
     - "python{{ '3' if ansible_python.version.major == 3 else '' }}-pymysql"
 
-  notify:
-    - start php-fpm
+- name: start php-fpm
+  systemd:
+    name: "php{{ php_ver }}-fpm"
+    state: started
 
 - name: "[NGINX] -  remove some commented line in php-fpm conf"
   lineinfile:
     dest: "{{ php_dir }}/fpm/pool.d/www.conf"
     regexp: '^\;env'
     state: absent
-    # validate: "/usr/sbin/{{ php_bin }} -t #%s"
-  notify: restart php-fpm
 
 - name: "[NGINX] - Dirty hack user and group in php-fpm conf"
   replace:
     dest: "{{ php_dir }}/fpm/pool.d/www.conf"
     regexp: 'www-data'
     replace: 'nginx'
-  notify: restart php-fpm
 
 - name: "[NGINX] -  Add path variable to php-fpm"
   blockinfile:
@@ -59,7 +58,6 @@
       env[TMP] = /tmp
       env[TMPDIR] = /tmp
       env[TEMP] = /tmp
-  notify: restart php-fpm
 
 - name: "[NGINX] -  enable APC for php CLI"
   lineinfile:
@@ -67,8 +65,6 @@
     line: "apc.enable_cli = 1"
     insertbefore: "^; End:$"
     state: present
-    # validate: "/usr/sbin/{{ php_bin }} -t #%s"
-  notify: restart php-fpm
 
 - name: "[NGINX] -  enable PHP OPcache for php.ini"
   lineinfile:
@@ -85,11 +81,14 @@
     - { regexp: 'opcache.memory_consumption', line: 'opcache.memory_consumption=128' }
     - { regexp: 'opcache.save_comments', line: 'opcache.save_comments=1' }
     - { regexp: 'opcache.revalidate_freq', line: 'opcache.revalidate_freq=1' }
-    # validate: "/usr/sbin/{{ php_bin }} -t #%s"
-  notify: restart php-fpm
 
 - name: "[NGINX] -  php handler configuration is present."
   template:
     dest: /etc/nginx/conf.d/php_handler.conf
     src: nginx_php_handler.j2
   notify: reload nginx
+
+- name: restart php-fpm
+  systemd:
+    name: "php{{ php_ver }}-fpm"
+    state: restarted
