Add some basic packages for base role

--- a/provisioning/roles/base/tasks/main.yml
+++ b/provisioning/roles/base/tasks/main.yml
@@ -33,6 +33,9 @@
     - whois
     - ca-certificates
     - acl
+    - fallocate
+    - ncdu
+    - htop
     - sudo
     - libuv1-dev
     - "linux-headers-{{ ansible_kernel }}"
