Disable previews for nextcloud perfomance

--- a/provisioning/roles/nextcloud/vars/main.yml
+++ b/provisioning/roles/nextcloud/vars/main.yml
@@ -12,6 +12,7 @@ nextcloud_config_settings:
   - { name: 'memcache.local', value: '\OC\Memcache\APCu' }
   - { name: 'open_basedir', value: '/dev/urandom' }
   - { name: 'mysql.utf8mb4', value: 'true' }
+  - { name: 'enable_previews', value: 'false' }
   - { name: 'updater.release.channel', value: 'production' } # production | stable | daily | beta
 
 nextcloud_redis_settings:
