Set 2GB swapfile

--- a/provisioning/setup.yml
+++ b/provisioning/setup.yml
@@ -31,7 +31,8 @@
     - rainloop
     - wireguard
     - pimpmylog
-    # - djx339.swapoff
+    - djx339.swapoff
+    - { role: "nickjj.swapfile", vars: { swapfile_size: '2048', swapfile_swappiness: 10 } }
     - cleanup
 
 
