--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ secret
 provisioning/roles/jffz.netdata/
 provisioning/roles/robertdebock.bootstrap/
 provisioning/roles/djx339.swapoff/
+provisioning/roles/nickjj.swapfile/
 provisioning/roles/sjinks.haveged/
 provisioning/wireguard_profiles
