Add ongoing mysql todos for pimp my log

--- a/provisioning/roles/pimpmylog/tasks/main.yml
+++ b/provisioning/roles/pimpmylog/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 # TODO: move to vars
 # TODO: mysql log
+# - `/var/log/mysql.err` (MySQL error log)
+# - `/var/log/mysql-slow.log` (MySQL slow query log)
 - name: Clone Pimp my Log.
   git:
     dest: "/opt/pimpmylog"
