Add sentry todo

--- a/provisioning/setup.yml
+++ b/provisioning/setup.yml
@@ -40,6 +40,7 @@
     # - jitsi # idk something for video calling
     # - git # idk gitlab gitea
     # - wallabag
+    # - sentry
     # https://github.com/opensolutions/ViMbAdmin
 
     # Ideas:
