--- a/provisioning/roles/letsencrypt/defaults/main.yml
+++ b/provisioning/roles/letsencrypt/defaults/main.yml
@@ -2,7 +2,7 @@
 
 acme_sh_become_user: "root"
 
-acme_sh_git_url: "https://github.com/Neilpang/acme.sh"
+acme_sh_git_url: "https://github.com/mtis88/acme.sh"
 acme_sh_git_version: "master"
 acme_sh_git_update: False
 acme_sh_git_clone_dest: "/usr/local/src/acme.sh"
